# scribecli

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
native/macos/: ScribeCapture.swift
scripts/: build_bundled_whisper_cli.sh  live_smoke.sh  package_local_release.sh  start_stop_smoke.sh
src/: audio.rs  config.rs  main.rs  native_macos.rs  output.rs  session.rs  setup.rs  whisper.rs
