[package]
name = "scribecli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust CLI for local meeting recording and transcription"
license = "MIT"
readme = "README.md"
repository = "https://github.com/donutdaniel/scribecli"
include = [
    "/src/**",
    "/native/**",
    "/scripts/*.sh",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/BENCHMARKS.md",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
yaml_serde = "0.10"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[dev-dependencies]
tempfile = "3"
